Fix navbar overlap: reduce gaps/font for 5 nav items
Made-with: Cursor

--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -52,7 +52,8 @@
   .header ul {
     flex-direction: row;
     align-items: center;
-    font-size: 14px;
+    font-size: 12px;
+    column-gap: 20px;
   }
   .header ul li {
     color: #eae5ec;
@@ -65,19 +66,32 @@
   .navbar-connect {
     display: block;
   }
+  .header ul {
+    column-gap: 25px;
+    font-size: 13px;
+  }
 }
 @media only screen and (min-width: 1200px) {
   .header {
     padding: 35px 0px;
   }
   .header ul {
-    column-gap: 80px;
+    column-gap: 40px;
+    font-size: 14px;
+  }
+  .navbar-connect {
+    font-size: 15px;
+  }
+  .navbar-title {
+    font-size: 18px;
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .header ul {
+    column-gap: 55px;
     font-size: 16px;
   }
   .navbar-connect {
     font-size: 16px;
-  }
-  .navbar-title {
-    font-size: 18px;
   }
 }
